crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_empty_containers__remove_empty_containers-5.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_empty_containers.rs
expression: "test_config(r#\"{ \"removeEmptyContainers\": true }\"#,\nSome(r#\"<svg width=\"480\" height=\"360\" xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- preserve id'd mask -->\n    <mask id=\"testMask\" />\n    <rect x=\"100\" y=\"100\" width=\"250\" height=\"150\" fill=\"green\" />\n    <rect x=\"100\" y=\"100\" width=\"250\" height=\"150\" fill=\"red\" mask=\"url(#testMask)\" />\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="480" height="360">
    <!-- preserve id'd mask -->
    <mask id="testMask"></mask>
    <rect x="100" y="100" width="250" height="150" fill="green"></rect>
    <rect x="100" y="100" width="250" height="150" fill="red" mask="url(#testMask)"></rect>
</svg>
