crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_empty_containers__remove_empty_containers.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_empty_containers.rs
expression: "test_config(r#\"{ \"removeEmptyContainers\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- remove empty containers -->\n    <pattern/>\n    <g>\n        <marker>\n            <a/>\n        </marker>\n    </g>\n    <path d=\"...\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- remove empty containers -->
    <path d="..."/>
</svg>
